--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "request": "^2.81.0",
-    "sync-request": "^4.1.0"
+    "sync-request": "^4.1.0",
+    "inquirer": "^3.1.0",
+
   },
   "devDependencies": {
-    "inquirer": "^3.1.0",
     "prettier": "^1.4.4"
   }
 }
