--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "request": "^2.81.0",
     "sync-request": "^4.1.0",
-    "inquirer": "^3.1.0",
-
+    "inquirer": "^3.1.0"
   },
   "devDependencies": {
     "prettier": "^1.4.4"
