--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "You will get youlikehits points by running this ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "runner": "node index.js",
+    "scrunner": "node soundcloud.js",
+    "acrunner": "node accountrunner.js"
   },
   "author": "Vedant Seta",
   "license": "ISC",
   "dependencies": {
+    "inquirer": "^3.1.0",
     "request": "^2.81.0",
-    "sync-request": "^4.1.0",
-    "inquirer": "^3.1.0"
+    "sync-request": "^4.1.0"
   },
   "devDependencies": {
     "prettier": "^1.4.4"
