--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "Vedant Seta",
   "license": "ISC",
   "dependencies": {
+    "inquirer": "^3.1.0",
+    "node-notifier": "^5.1.2",
     "request": "^2.81.0",
-    "sync-request": "^4.1.0",
-    "inquirer": "^3.1.0"
+    "sync-request": "^4.1.0"
   },
   "devDependencies": {
     "prettier": "^1.4.4"
